--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -77,7 +77,7 @@
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 android:layout_marginLeft="10dp"
-                android:text="@string/uname"/>
+                android:text="@string/uphone"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
