--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -5,13 +5,13 @@
     android:orientation="vertical">
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/laddan"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:background="@color/colorPrimary"
         android:layout_width="wrap_content"
@@ -43,11 +43,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         >
         <View
             android:layout_width="20dp"
-
             android:layout_height="1dp"
             />
 
@@ -63,6 +62,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_header_name"
@@ -78,17 +78,18 @@
                 android:textSize="17sp"
                 android:layout_marginLeft="10dp"
                 android:text="@string/uphone"/>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 >
-
                 <TextView
+                    android:layout_marginLeft="@dimen/space_10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/nav_logout"
                     android:textColor="@color/white"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="20dp"
                     android:textSize="17sp"
                     android:text="@string/nav_logout"/>
 
@@ -96,12 +97,11 @@
                     android:id="@+id/nav_my_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/edit_profile"
                     android:textColor="@color/white"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="20dp"
-
                     android:textSize="17sp" />
             </RelativeLayout>
 
@@ -110,14 +110,16 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
-        android:weightSum="3"
+        android:weightSum="4"
         >
-
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -126,18 +128,18 @@
             android:textColor="@color/white"
             android:layout_marginTop="13dp"
             android:fontFamily="@font/bold"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:text="@string/favourt"/>
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/nav_fav_num"
             android:layout_toRightOf="@+id/nav_fav"
             android:textColor="@color/white"
             android:gravity="center"
             android:layout_marginTop="15dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:text="0"/>
 
 
@@ -151,15 +153,15 @@
             android:textColor="@color/white"
             android:gravity="center"
             android:fontFamily="@font/bold"
-            android:textSize="23sp" />
+            android:textSize="20sp" />
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/nav_followed_num"
             android:textColor="@color/white"
             android:layout_marginTop="13dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center"
             android:text="0"/>
     </LinearLayout>
@@ -177,15 +179,41 @@
             android:text="@string/nav_order"
             android:layout_margin="10dp"
             android:textSize="18sp"
-
             android:textColor="@color/black"
-
             />
+
+        <LinearLayout
+
+            android:layout_below="@id/my_orders"
+            android:id="@+id/jaffery"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="6"
+            >
+            <TextView
+                android:layout_margin="5dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="My wallet "
+                />
+            <TextView
+                android:layout_margin="5dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="J6 Points"
+                />
+
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/my_wallet"
-            android:layout_below="@id/my_orders"
+            android:layout_below="@id/jaffery"
             android:text="@string/wall_am"
             android:textSize="18sp"
             android:layout_margin="10dp"
