--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -138,6 +138,7 @@
             android:text=" : "
             />
         <TextView
+
             android:layout_width="0dp"
             android:layout_weight="1.4"
             android:layout_height="wrap_content"
@@ -217,6 +218,7 @@
                 android:text="My Wallet Ammount : "
                 />
                 <TextView
+                    android:id="@+id/wallet"
                     android:textSize="12sp"
                     android:gravity="center"
                     android:layout_gravity="center"
@@ -247,6 +249,7 @@
                     android:text="J6 Points : "
                     />
                 <TextView
+                    android:id="@+id/reward"
                     android:textSize="12sp"
                     android:gravity="center"
                     android:layout_gravity="center"
