--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -186,7 +186,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="@dimen/space_10"
             android:layout_marginLeft="12dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             />
 
@@ -199,7 +199,7 @@
             >
             <LinearLayout
                 android:gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:background="@drawable/bg_rounded_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -217,7 +217,7 @@
                 android:text="My Wallet Ammount : "
                 />
                 <TextView
-                    android:textSize="12sp"
+                    android:textSize="8sp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:padding="5dp"
@@ -231,7 +231,7 @@
 
             <LinearLayout
                 android:gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:background="@drawable/bg_rounded_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -247,7 +247,7 @@
                     android:text="J6 Points : "
                     />
                 <TextView
-                    android:textSize="12sp"
+                    android:textSize="8sp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:padding="5dp"
@@ -328,24 +328,20 @@
             android:textColor="@color/black"
 
             />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            android:id="@+id/v1"
-            android:layout_below="@id/nav_login"/>
 
         <LinearLayout
+            android:background="@drawable/laddan_backy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3"
-            android:layout_marginTop="5dp"
-            android:layout_below="@id/v1"
+            android:layout_margin="5dp"
+            android:layout_below="@id/nav_login"
             android:id="@+id/l1"
             >
 
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rate"
@@ -353,10 +349,11 @@
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:drawableTop="@drawable/rate"
+                android:drawableTop="@drawable/group_star"
                 android:layout_weight="1"
                 />
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nav_share"
@@ -364,10 +361,11 @@
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textAlignment="center"
-                android:drawableTop="@drawable/share"
+                android:drawableTop="@drawable/group_share"
                 android:layout_weight="1"
                 />
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/feedback"
@@ -375,27 +373,24 @@
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:drawableTop="@drawable/feedback"
+                android:drawableTop="@drawable/group_like"
                 android:layout_weight="1"
                 />
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            android:id="@+id/v2"
-            android:layout_below="@id/l1"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nav_contact"
-            android:layout_below="@id/v2"
-            android:textSize="23sp"
+            android:layout_below="@id/l1"
+            android:textSize="20sp"
+            android:layout_marginLeft="12dp"
             android:layout_margin="10dp"
             android:id="@+id/contact"
             android:textColor="@color/black"/>
         <LinearLayout
+            android:id="@+id/new_linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -430,10 +425,66 @@
                 android:drawableTop="@drawable/twitter"
                 />
 
-
         </LinearLayout>
 
+        <LinearLayout
+            android:background="@drawable/laddan_backy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="4"
+            android:layout_margin="5dp"
+            android:layout_below="@id/new_linear"
+            android:id="@+id/l2"
+            >
 
+            <TextView
+                android:layout_margin="@dimen/space_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Terms and Conditions"
+                android:id="@+id/term"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:layout_margin="@dimen/space_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Privacy Policy"
+                android:id="@+id/policy"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:layout_margin="@dimen/space_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Return Policy"
+                android:id="@+id/return_policy"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:layout_margin="@dimen/space_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Help Centre"
+                android:id="@+id/help"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                />
+
+        </LinearLayout>
 
 
     </RelativeLayout>
