--- a/app/src/main/res/layout/row_deal_of_the_day.xml
+++ b/app/src/main/res/layout/row_deal_of_the_day.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -62,7 +63,7 @@
                     android:id="@+id/end_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="dd"
+                    android:text=""
                     android:textColor="#000"
                     android:textSize="8sp" />
 
@@ -76,6 +77,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="top"
             android:gravity="top|center"
+            android:paddingTop="@dimen/space_3"
             android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
