--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="purple">#ed0bc0</color>
 
     <color name="splash_pink">#ff69b4</color>
-    <color name="green">#7ad6d6</color>
+    <color name="green">#2abcbc</color>
     <color name="light_gray">#faf5f5</color>
     <color name="contact_name">#333333</color>
     <color name="contact_number">#8c8c8c</color>
