--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -204,9 +204,10 @@
                 android:background="#ffffff"
                 android:orientation="vertical">
 
+
                 <androidx.recyclerview.widget.RecyclerView
                         android:layout_marginTop="10dp"
-                        android:layout_marginBottom="50dp"
+                        android:layout_marginBottom="10dp"
                         android:id="@+id/rv_stores"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -214,7 +215,12 @@
                         app:layout_behavior="@string/appbar_scrolling_view_behavior"
                         />
             </LinearLayout>
-
+                <ImageView
+                    android:id="@+id/dealday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/dealoftheday"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/catprodrv"
                     android:background="@color/white"
