--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 <LinearLayout
     android:layout_width="match_parent"
@@ -149,28 +150,6 @@
             android:text="0"
             />
 
-
-<!--        <TextView-->
-<!--            android:id="@+id/nav_followed"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="13dp"-->
-<!--            android:text="@string/followed"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:gravity="center"-->
-<!--            android:fontFamily="@font/bold"-->
-<!--            android:textSize="20sp" />-->
-<!--        <TextView-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:id="@+id/nav_followed_num"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:layout_marginTop="13dp"-->
-<!--            android:textSize="18sp"-->
-<!--            android:gravity="center"-->
-<!--            android:text="0"/>-->
     </LinearLayout>
 
 </LinearLayout>
@@ -187,11 +166,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="@dimen/space_10"
             android:layout_marginLeft="12dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             />
 
         <LinearLayout
+            android:layout_marginBottom="@dimen/space_10"
             android:layout_below="@id/my_orders"
             android:id="@+id/jaffery"
             android:layout_width="match_parent"
@@ -201,7 +181,7 @@
             <LinearLayout
                 android:id="@+id/llwallet"
                 android:gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:background="@drawable/bg_rounded_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -209,7 +189,7 @@
                 android:orientation="horizontal"
                 >
             <TextView
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:padding="5dp"
@@ -220,7 +200,7 @@
                 />
                 <TextView
                     android:id="@+id/wallet"
-                    android:textSize="12sp"
+                    android:textSize="8sp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:padding="5dp"
@@ -235,7 +215,7 @@
             <LinearLayout
                 android:id="@+id/llpoints"
                 android:gravity="center"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:background="@drawable/bg_rounded_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -243,7 +223,7 @@
                 android:orientation="horizontal"
                 >
                 <TextView
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:padding="5dp"
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
@@ -252,7 +232,7 @@
                     />
                 <TextView
                     android:id="@+id/reward"
-                    android:textSize="12sp"
+                    android:textSize="8sp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:padding="5dp"
@@ -263,7 +243,6 @@
                     />
 
             </LinearLayout>
-
 
         </LinearLayout>
 
@@ -308,6 +287,7 @@
             android:textColor="@color/black"
             />
         <TextView
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -333,24 +313,21 @@
             android:textColor="@color/black"
 
             />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            android:id="@+id/v1"
-            android:layout_below="@id/nav_login"/>
 
         <LinearLayout
+            android:layout_margin="@dimen/space_5"
+            android:background="@drawable/laddan_backy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3"
             android:layout_marginTop="5dp"
-            android:layout_below="@id/v1"
+            android:layout_below="@id/nav_login"
             android:id="@+id/l1"
             >
 
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rate"
@@ -358,10 +335,11 @@
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:drawableTop="@drawable/rate"
+                android:drawableTop="@drawable/group_star"
                 android:layout_weight="1"
                 />
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nav_share"
@@ -369,10 +347,11 @@
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:textAlignment="center"
-                android:drawableTop="@drawable/share"
+                android:drawableTop="@drawable/group_share"
                 android:layout_weight="1"
                 />
             <TextView
+                android:layout_margin="@dimen/space_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/feedback"
@@ -380,64 +359,191 @@
                 android:textAlignment="center"
                 android:textSize="20sp"
                 android:textColor="@color/black"
-                android:drawableTop="@drawable/feedback"
+                android:drawableTop="@drawable/group_like"
                 android:layout_weight="1"
                 />
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            android:id="@+id/v2"
-            android:layout_below="@id/l1"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nav_contact"
-            android:layout_below="@id/v2"
-            android:textSize="23sp"
+            android:layout_below="@id/l1"
+            android:textSize="20sp"
+            android:layout_marginLeft="@dimen/space_12"
             android:layout_margin="10dp"
             android:id="@+id/contact"
             android:textColor="@color/black"/>
+
         <LinearLayout
+            android:layout_marginBottom="10dp"
+            android:id="@+id/tempp"
+            android:layout_below="@id/contact"
+            android:layout_width="match_parent"
+            android:weightSum="100"
+            android:paddingTop="5dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            >
+            <LinearLayout
+                android:id="@+id/bot_store"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="20"
+                >
+                <TextView
+                    android:id="@+id/home_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/facebook"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="20"
+
+                android:id="@+id/bot_categories"
+                >
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/twitter"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    />
+
+                    </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="20"
+                android:id="@+id/bot_fav"
+                >
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/telegram"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    />
+
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="20"
+
+                android:id="@+id/bot_cart"
+                >
+
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/instagram"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    />
+
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="20"
+                android:id="@+id/bot_profile"
+                >
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/whatsapp"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_margin="@dimen/space_5"
+            android:background="@drawable/laddan_backy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_below="@id/contact">
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/tempp"
+            android:id="@+id/l21"
+            >
+
             <TextView
-                android:layout_width="0dp"
-                android:id="@+id/facbook"
-                android:layout_weight="1"
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableTop="@drawable/facebook"
+                android:text="Terms and \nConditions"
+                android:id="@+id/term"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Privacy \nPolicy"
+                android:id="@+id/privacy"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
                 />
 
             <TextView
-                android:id="@+id/whatsapp"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/whatsapp" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:id="@+id/instagram"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/instagram"
-                />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:id="@+id/twitter"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/twitter"
-                />
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
 
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Return \nPolicy"
+                android:id="@+id/ret_policy"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_weight="1"
+                />
+            <TextView
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Help \nCentre"
+                android:id="@+id/help"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                />
 
         </LinearLayout>
-
 
 
 
