--- a/app/src/main/res/drawable/laddan_backy.xml
+++ b/app/src/main/res/drawable/laddan_backy.xml
@@ -5,7 +5,7 @@
         android:color="@color/white"
         />
         <stroke
-            android:color="@color/colorAccent"
-            android:width="2dp"
+            android:color="@color/black"
+            android:width="0.5dp"
             />
 </shape>
