--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -163,7 +163,7 @@
                 <TextView
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="7dp"
-                    android:layout_gravity="right|end"
+                    android:layout_gravity="right"
                     android:background="@drawable/sign"
                     android:id="@+id/catname"
                     android:visibility="gone"
