--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -59,16 +59,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_header_name"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_marginLeft="10dp"
                 android:text="@string/uname"/>
             <TextView
@@ -90,7 +89,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/nav_logout"
                     android:textColor="@color/white"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="8dp"
                     android:textSize="17sp"
                     android:text="@string/nav_logout"/>
 
@@ -98,7 +97,7 @@
                     android:id="@+id/nav_my_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/edit_profile"
                     android:textColor="@color/white"
                     android:layout_alignParentRight="true"
@@ -395,7 +394,7 @@
                 android:layout_weight="20"
                 >
                 <TextView
-                    android:id="@+id/home_icon"
+                    android:id="@+id/fb"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:textColor="@color/black"
@@ -413,6 +412,7 @@
                 android:id="@+id/bot_categories"
                 >
                 <TextView
+                    android:id="@+id/twitter"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:textColor="@color/black"
@@ -430,6 +430,7 @@
                 android:id="@+id/bot_fav"
                 >
                 <TextView
+                    android:id="@+id/telegram"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:textColor="@color/black"
@@ -449,6 +450,7 @@
 
 
                 <TextView
+                    android:id="@+id/insta"
                     android:layout_centerHorizontal="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
@@ -467,6 +469,7 @@
                 android:id="@+id/bot_profile"
                 >
                 <TextView
+                    android:id="@+id/whatsapp"
                     android:layout_centerHorizontal="true"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
