--- a/app/src/main/res/layout/fragment_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_confirm_order.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="@dimen/space_3"
-    app:cardUseCompatPadding="true"
     card_view:cardCornerRadius="4dp">
 
     <RelativeLayout
@@ -247,7 +246,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@drawable/bg_rounded_button"
+            android:background="@drawable/bg_rounded_button1"
             android:orientation="vertical"
             android:padding="@dimen/space_10">
 
@@ -257,6 +256,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="@string/order_now"
+                android:layout_marginTop="@dimen/space_5"
+                android:layout_marginBottom="@dimen/space_5"
                 android:textColor="#fff"
                 android:textSize="@dimen/text_size_small"/>
         </LinearLayout>
