--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/laddan"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:background="@color/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
                 android:id="@+id/tv_header_name"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/uname"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -76,7 +76,7 @@
                 android:id="@+id/tv_adres_phone"
                 android:textColor="@color/white"
                 android:textSize="17sp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:text="@string/uphone"/>
 
             <RelativeLayout
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 >
                 <TextView
-                    android:layout_marginLeft="@dimen/space_10"
+                    android:layout_marginStart="@dimen/space_10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/nav_logout"
@@ -100,8 +100,8 @@
                     android:layout_marginTop="8dp"
                     android:text="@string/edit_profile"
                     android:textColor="@color/white"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="20dp"
                     android:textSize="17sp" />
             </RelativeLayout>
 
@@ -125,7 +125,7 @@
             android:textColor="@color/white"
             android:fontFamily="@font/bold"
             android:textSize="18sp"
-            android:gravity="right"
+            android:gravity="right|end"
             android:text="@string/cart"/>
         <TextView
             android:layout_gravity="center"
@@ -164,7 +164,7 @@
             android:text="@string/nav_order"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="@dimen/space_10"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             android:textSize="20sp"
             android:textColor="@color/black"
             />
@@ -195,7 +195,7 @@
                 android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Wallet Ammount : "
+                android:text="@string/wallet_ammount"
                 />
                 <TextView
                     android:id="@+id/wallet"
@@ -227,8 +227,9 @@
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="J6 Points : "
+                    android:text="@string/j6_point"
                     />
+
                 <TextView
                     android:id="@+id/reward"
                     android:textSize="8sp"
@@ -314,13 +315,14 @@
             />
 
         <LinearLayout
-            android:layout_margin="@dimen/space_5"
+            android:layout_marginStart="@dimen/space_5"
+            android:layout_marginEnd="@dimen/space_5"
             android:background="@drawable/laddan_backy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:layout_below="@id/nav_login"
             android:id="@+id/l1"
             >
@@ -370,8 +372,9 @@
             android:text="@string/nav_contact"
             android:layout_below="@id/l1"
             android:textSize="20sp"
-            android:layout_marginLeft="@dimen/space_12"
-            android:layout_margin="10dp"
+            android:layout_marginStart="@dimen/space_12"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="@dimen/space_10"
             android:id="@+id/contact"
             android:textColor="@color/black"/>
 
@@ -482,36 +485,39 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_margin="@dimen/space_5"
+            android:layout_marginStart="@dimen/space_5"
+            android:layout_marginEnd="@dimen/space_5"
             android:background="@drawable/laddan_backy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="@dimen/space_10"
             android:layout_below="@id/tempp"
             android:id="@+id/l21"
             >
 
             <TextView
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginBottom="@dimen/space_8"
+                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terms and \nConditions"
+                android:text="@string/term_and_conditions"
                 android:id="@+id/term"
                 android:textAlignment="center"
                 android:textSize="15sp"
                 android:textColor="@color/black"
                 android:layout_weight="1"
                 />
+
             <TextView
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginBottom="@dimen/space_8"
+                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_10"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Privacy \nPolicy"
+                android:text="@string/privacy"
                 android:id="@+id/privacy"
                 android:textAlignment="center"
                 android:textSize="15sp"
@@ -520,12 +526,12 @@
                 />
 
             <TextView
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginBottom="@dimen/space_8"
+                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_10"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Return \nPolicy"
+                android:text="@string/return_p"
                 android:id="@+id/ret_policy"
                 android:textSize="15sp"
                 android:textColor="@color/black"
@@ -533,12 +539,12 @@
                 android:layout_weight="1"
                 />
             <TextView
-                android:layout_marginTop="@dimen/space_8"
-                android:layout_marginBottom="@dimen/space_8"
+                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginBottom="@dimen/space_10"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Help \nCentre"
+                android:text="@string/help_centre"
                 android:id="@+id/help"
                 android:textAlignment="center"
                 android:textSize="15sp"
