--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -62,6 +62,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/bold"
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -138,13 +139,12 @@
             android:text=" : "
             />
         <TextView
-
             android:layout_width="0dp"
             android:layout_weight="1.4"
             android:layout_height="wrap_content"
             android:id="@+id/cart_num"
             android:textColor="@color/white"
-            android:gravity="left"
+            android:gravity="start|left"
             android:textSize="18sp"
             android:text="0"
             />
